--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <header class="header">
@@ -25,11 +25,8 @@
         </ul>
       </nav>
       <a class="header__logo">
-        <img 
-          class="header__logo-image"
-          src="./images/logo-black.svg"
-          alt="Логотип аукциона"
-        >
+        <img class="header__logo-image"
+        src="./images/logo-black.svg" alt="Логотип аукциона">
       </a>
       <address class="address">
         <ul class="header__address">
@@ -45,14 +42,17 @@
     </header>
     <main>
       <section class="cover">
-        <h1 class="title">
-          <span>оно</span>
-          <span>тебе</span>
-          <span>надо</span>
+        <div class="overlay"></div>
+        <h1 class="cover__title letter-spacing-extended">
+          <span class="aligned-text aligned-text_left">оно</span>
+          <span class="aligned-text aligned-text_center">тебе</span>
+          <span class="aligned-text aligned-text_right">надо</span>
         </h1>
-        <div class="description">
-          <p>аукцион вещей, в который никто не верил</p>
-          <button class="button">сделать ставку</button>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            аукцион вещей, в которыe никто не верил
+          </p>
+          <button class="bet-button">сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -91,7 +91,7 @@
       </section>
       <section class="about">
         <div class="logo-column">
-          <img>
+          <img />
         </div>
         <div class="about-column">
           <h3>Об аукционе</h3>
