--- a/index.html
+++ b/index.html
@@ -56,40 +56,55 @@
         </div>
       </section>
       <section class="lots">
-        <h2>лоты</h2>
-        <ul class="carts">
-          <li>
-            <a>Фильм режиссёра, который бросил киношколу</a>
-            <article>
-              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-              ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+        <h2 class="lots__heading">лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">   
+            <article class="card card_type_film">
+              <a class="card-link overlay" href="#0">
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+                </p>
+              </a>  
             </article>
           </li>
-          <li>
-            <a
-              >Книга, где описан один скучный день из жизни рекламного агента</a
-            >
-            <article>
-              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-              переходами на древнеанглийский. В ней одновременно рассказывается
-              о 16 июня 1904 года и об истории литературы, начиная с античных
-              времён. И это всё накладывается на эпическую поэму Гомера. Сколько
-              бы вы поставили на «Улисса» Джеймса Джойса?
+          <li class="lots__card-list-item">     
+            <article class="card card_type_book">
+              <a class="card-link overlay" href="#0">
+                <h3 class="card__title"> 
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+                  переходами на древнеанглийский. В ней одновременно рассказывается
+                  о 16 июня 1904 года и об истории литературы, начиная с античных
+                  времён. И это всё накладывается на эпическую поэму Гомера. Сколько
+                  бы вы поставили на «Улисса» Джеймса Джойса?
+                </p>
+            </a>
             </article>
           </li>
-          <li>
-            <a>Картина, которую повторит даже 5-летний сын маминой подруги</a>
-            <article>
-              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
-              похожее на инфузорию-туфельку. Никаких полей, лесов, котиков...
-              Сколько бы вы на такое поставили, если бы не знали, что это — одна
-              из революционных работ Кандинского?
+          <li class="lots__card-list-item">  
+            <article class="card card_type_picture">
+              <a class="card-link overlay" href="#0">
+                <h3 class="card__title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
+                  похожее на инфузорию-туфельку. Никаких полей, лесов, котиков...
+                  Сколько бы вы на такое поставили, если бы не знали, что это — одна
+                  из революционных работ Кандинского?
+                </p>
+              </a>
             </article>
-          </li>
+          </li>     
         </ul>
-        <a class="more">посмотреть больше</a>
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
-      <section class="about">
+<!--  <section class="about">
         <div class="logo-column">
           <img />
         </div>
