--- a/index.html
+++ b/index.html
@@ -104,21 +104,21 @@
         </ul>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
-<!--  <section class="about">
-        <div class="logo-column">
-          <img />
-        </div>
-        <div class="about-column">
-          <h3>Об аукционе</h3>
-          <div class="discription-block">
-            <p>
+      <section class="about">
+        <div class="about__column">
+          <div class="about__logo">
+            <img class="about__logo-image">
+          </div>
+          <h4 class="about__title">Об аукционе</h4>
+          <div class="description_block">
+            <p class="about__text">
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни
               на один аукцион. Потому что кому нужен дневник девочки-подростка
               или картина, которую может нарисовать даже ребёнок? Кому нужны все
               эти странные вещи, созданные любителями?
             </p>
-            <p>
+             <p class="about__text">
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
               непонятые. Когда-то они казались просто неудачными. Но, несмотря
@@ -126,12 +126,12 @@
               лотов невозможно представить современную культуру. Когда в эти
               вещи не верил никто, продолжали верить их создатели. И сейчас эти
               лоты стали культовыми.
-            </p>
+              </p>
           </div>
         </div>
       </section>
     </main>
-    <footer class="footer">
+<!--<footer class="footer">
       <address class="contacts">
         <ul>
           <li>
