--- a/index.html
+++ b/index.html
@@ -105,30 +105,32 @@
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
-        <div class="about__column">
+        <article class="about__column">
           <div class="about__logo">
-            <img class="about__logo-image">
+            <img class="about__logo-image"src="./images/logo-white.svg" alt="Логотип аукциона">
           </div>
+        </article>
+        <article class="about__column">
           <h4 class="about__title">Об аукционе</h4>
           <div class="description_block">
             <p class="about__text">
               Здесь вы не встретите очередное пафосное собрание невероятно
-              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
-              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              дорогого антиквариата. Наши лоты вообще не должны были попасть<br>
+              ни на один аукцион. Потому что кому нужен дневник девочки-подростка
               или картина, которую может нарисовать даже ребёнок? Кому нужны все
               эти странные вещи, созданные любителями?
             </p>
              <p class="about__text">
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
-              непонятые. Когда-то они казались просто неудачными. Но, несмотря
-              на критику, кажущуюся простоту или сложность, сейчас без этих
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря<br>
+              на  критику, кажущуюся простоту или сложность, сейчас без этих
               лотов невозможно представить современную культуру. Когда в эти
               вещи не верил никто, продолжали верить их создатели. И сейчас эти
-              лоты стали культовыми.
-              </p>
+              лоты стали культовыми .
+            </p>
           </div>
-        </div>
+        </article>
       </section>
     </main>
 <!--<footer class="footer">
