--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         </ul>
       </nav>
       <a class="header__logo">
-        <img class="header__logo-image"
-        src="./images/logo-black.svg" alt="Логотип аукциона">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип аукциона">
       </a>
       <address class="address">
         <ul class="header__address">
@@ -58,7 +60,7 @@
       <section class="lots">
         <h2 class="lots__heading">лоты</h2>
         <ul class="lots__card-list">
-          <li class="lots__card-list-item">   
+          <li class="lots__card-list-item">
             <article class="card card_type_film">
               <a class="card-link overlay" href="#0">
                 <h3 class="card__title">
@@ -66,95 +68,131 @@
                 </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                  ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-                </p>
-              </a>  
-            </article>
-          </li>
-          <li class="lots__card-list-item">     
-            <article class="card card_type_book">
-              <a class="card-link overlay" href="#0">
-                <h3 class="card__title"> 
-                  Книга, где описан один скучный день из жизни рекламного агента
-                </h3>
-                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-                  переходами на древнеанглийский. В ней одновременно рассказывается
-                  о 16 июня 1904 года и об истории литературы, начиная с античных
-                  времён. И это всё накладывается на эпическую поэму Гомера. Сколько
-                  бы вы поставили на «Улисса» Джеймса Джойса?
-                </p>
-            </a>
-            </article>
-          </li>
-          <li class="lots__card-list-item">  
-            <article class="card card_type_picture">
-              <a class="card-link overlay" href="#0">
-                <h3 class="card__title">
-                Картина, которую повторит даже 5-летний сын маминой подруги
-                </h3>
-                <p class="card__text">
-                  Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
-                  похожее на инфузорию-туфельку. Никаких полей, лесов, котиков...
-                  Сколько бы вы на такое поставили, если бы не знали, что это — одна
-                  из революционных работ Кандинского?
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
                 </p>
               </a>
             </article>
-          </li>     
+          </li>
+          <li class="lots__card-list-item">
+            <article class="card card_type_book">
+              <a class="card-link overlay" href="#0">
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </a>
+            </article>
+          </li>
+          <li class="lots__card-list-item">
+            <article class="card card_type_picture">
+              <a class="card-link overlay" href="#0">
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </a>
+            </article>
+          </li>
         </ul>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
-        <article class="about__column">
+        <div class="about__column">
           <div class="about__logo">
-            <img class="about__logo-image"src="./images/logo-white.svg" alt="Логотип аукциона">
+            <img
+              class="about__logo-image"
+              src="./images/logo-white.svg"
+              alt="Логотип аукциона">
           </div>
-        </article>
-        <article class="about__column">
+        </div>
+        <div class="about__column">
           <h4 class="about__title">Об аукционе</h4>
           <div class="description_block">
             <p class="about__text">
               Здесь вы не встретите очередное пафосное собрание невероятно
-              дорогого антиквариата. Наши лоты вообще не должны были попасть<br>
-              ни на один аукцион. Потому что кому нужен дневник девочки-подростка
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
               или картина, которую может нарисовать даже ребёнок? Кому нужны все
               эти странные вещи, созданные любителями?
             </p>
-             <p class="about__text">
+            <p class="about__text">
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
-              непонятые. Когда-то они казались просто неудачными. Но, несмотря<br>
-              на  критику, кажущуюся простоту или сложность, сейчас без этих
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
               лотов невозможно представить современную культуру. Когда в эти
               вещи не верил никто, продолжали верить их создатели. И сейчас эти
               лоты стали культовыми .
             </p>
           </div>
-        </article>
+        </div>
       </section>
     </main>
-<!--<footer class="footer">
-      <address class="contacts">
-        <ul>
+    <footer class="footer">
+      <address class="address">
+        <ul class="footer__address">
           <li>
-            <a>+9 999 555 5555</a>
+            <a href="tel:+99995555555">+9 999 555 5555</a>
           </li>
           <li>
-            <a>info@sobaka.ge</a>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
-          <li>наб. Принсенграхт 263- 265, Амстердам</li>
+          <li>наб. Принсенграхт 263-265, Амстердам</li>
         </ul>
       </address>
-      <nav class="menu-footer"></nav>
-      <ul>
-        <li><a>главная</a></li>
-        <li><a>посмотреть лоты</a></li>
-        <li><a>об аукционе</a></li>
-      </ul>
-      <ul class="socials">
-        <li></li>
-        <li></li>
-        <li></li>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link footer__menu-link_active" href="#0"
+              >главная</a
+            >
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="иконка ЮТУБ">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="иконка ВК">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="иконка ПИНТЕРЕСТ">
+          </a>
+        </li>
       </ul>
     </footer>
   </body>
