--- a/index.html
+++ b/index.html
@@ -25,21 +25,14 @@
         </ul>
       </nav>
       <a class="header__logo">
-        <img
-          class="header__logo-image"
+        <img class="header__logo-image"
           src="./images/logo-black.svg"
           alt="Логотип аукциона">
       </a>
-      <address class="address">
-        <ul class="header__address">
-          <li>
-            <a href="tel:+99995555555">+9 999 555 5555</a>
-          </li>
-          <li>
-            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          </li>
-          <li>наб. Принсенграхт 263- 265, Амстердам</li>
-        </ul>
+      <address class="address header__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -61,8 +54,9 @@
         <h2 class="lots__heading">лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <article class="card card_type_film">
-              <a class="card-link overlay" href="#0">
+            <a class="card-link" href="#0">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
@@ -71,12 +65,13 @@
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
                 </p>
-              </a>
-            </article>
+              </article>
+            </a>
           </li>
           <li class="lots__card-list-item">
-            <article class="card card_type_book">
-              <a class="card-link overlay" href="#0">
+            <a class="card-link" href="#0">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
@@ -88,12 +83,13 @@
                   эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
                   Джеймса Джойса?
                 </p>
-              </a>
-            </article>
+              </article>
+            </a>
           </li>
           <li class="lots__card-list-item">
-            <article class="card card_type_picture">
-              <a class="card-link overlay" href="#0">
+            <a class="card-link" href="#0">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
@@ -103,8 +99,8 @@
                   котиков... Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
                 </p>
-              </a>
-            </article>
+              </article>
+            </a>
           </li>
         </ul>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
@@ -115,11 +111,12 @@
             <img
               class="about__logo-image"
               src="./images/logo-white.svg"
-              alt="Логотип аукциона">
+              alt="Логотип аукциона"
+            >
           </div>
         </div>
         <div class="about__column">
-          <h4 class="about__title">Об аукционе</h4>
+          <h2 class="about__title">Об аукционе</h2>
           <div class="description_block">
             <p class="about__text">
               Здесь вы не встретите очередное пафосное собрание невероятно
@@ -142,16 +139,10 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="address">
-        <ul class="footer__address">
-          <li>
-            <a href="tel:+99995555555">+9 999 555 5555</a>
-          </li>
-          <li>
-            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          </li>
-          <li>наб. Принсенграхт 263-265, Амстердам</li>
-        </ul>
+      <address class="address footer__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
@@ -171,24 +162,21 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img
-              class="footer__social-icon"
+            <img class="footer__social-icon"
               src="./images/yt.svg"
               alt="иконка ЮТУБ">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img
-              class="footer__social-icon"
+            <img class="footer__social-icon"
               src="./images/vk.svg"
               alt="иконка ВК">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img
-              class="footer__social-icon"
+            <img class="footer__social-icon"
               src="./images/pinterest.svg"
               alt="иконка ПИНТЕРЕСТ">
           </a>
